# entre-mundos-app

./: .gitignore  README.md  entre_mundos_app.bat  pyproject.toml
.streamlit/: config.toml
entre_mundos_app/: __init__.py  common.py  main.py
entre_mundos_app/data/: gasto.xlsx  pacote.xlsx  pagamento.xlsx  participante.xlsx  projeto.xlsx
entre_mundos_app/pages/: calculator.py  finance.py  home.py
